<resources>
    <string name="app_name" translatable="false">WhatsApp Clone</string>
    <string name="google_maps_key" translatable="false">AIzaSyCcj2Nnb4-OhQMDrcdCla7dpHAxQp_4AxU</string>
    <string name="google_application_id" translatable="false">ca-app-pub-9517910519036096~6910450496</string>
    <string name="app_service_name" translatable="false">Messaging Service</string>
    <string name="key_message_notifications_settings_light" translatable="false">message_notifications_settings_light</string>
    <string name="key_message_group_notifications_settings_tone" translatable="false">message_group_notifications_settings_tone</string>
    <string name="key_message_group_notifications_settings_vibrate" translatable="false">message_group_notifications_settings_vibrate</string>
    <string name="key_message_group_notifications_settings_light" translatable="false">message_group_notifications_settings_light</string>
    <string name="key_call_notifications_settings_vibrate" translatable="false">call_notifications_settings_vibrate</string>
    <string name="key_enter_send" translatable="false">enter_send</string>
    <string name="key_message_font_size" translatable="false">message_font_size</string>
    <string name="key_wallpaper_message" translatable="false">wallpaper_message</string>
    <string name="key_conversations_tones" translatable="false">conversation_tones</string>
    <string name="key_message_notifications_settings_tone" translatable="false">message_notifications_settings_tone</string>
    <string name="key_call_notifications_settings_tone" translatable="false">call_notifications_settings_tone</string>
    <string name="key_message_notifications_settings_vibrate" translatable="false">message_notifications_settings_vibrate</string>
    <string name="user_image_transition" translatable="false">userImage</string>
    <string name="user_name_transition" translatable="false">userName</string>
    <string name="date_format_today_hour" translatable="false">HH:mm</string>
    <string name="date_format" translatable="false">d MMMM yyyy</string>
    <string name="date_format_yesterday">YESTERDAY</string>
    <string name="chats_title_tab">Chats</string>
    <string name="number">Mobile number</string>
    <string name="NoStories">There\'s no stories yet, you may create one now</string>
    <string name="NoMessages">There\'s no conversations yet, you may start one now</string>
    <string name="NoCalls">There\'s no calls yet, you may start one now</string>
    <string name="NoContacts">There is no contacts .Please try again later or add new one</string>
    <string name="NoResult">Nothing</string>
    <string name="error_response_contacts">Unable to update your contacts.</string>
    <string name="name_is_too_short">the name is too short</string>
    <string name="select_picture">select an image</string>
    <string name="new_group">New group</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="refresh_contacts">Refresh</string>
    <string name="search">Search</string>
    <string name="add_contact">addContact</string>
    <string name="new_message">New Message</string>
    <string name="title_activity_add_members_to_group">New group</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="view_in_ad_book">View in address book</string>
    <string name="next">NEXT</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification">Set back and keep calm you will receive an sms of verification</string>
    <string name="resend">You didn\'t receive any code? Resend</string>
    <string name="enter_the_code_below_to_verify">Enter the code below to verify</string>
    <string name="enter_your_code">-- -- -- -- -- --</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_ver_code">Please enter your verification code</string>
    <string name="enter_a_val_number">Enter a valid mobile phone</string>
    <string name="invite">INVITE</string>
    <string name="your_current_status">Your current status</string>
    <string name="select_your_new_status">Select your new status</string>
    <string name="title_activity_status">Status</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="delete">Delete</string>
    <string name="delete_status">Delete status</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="write_something">Write something</string>
    <string name="title_activity_edit_status">Edit status</string>
    <string name="deleteALL">Delete All</string>
    <string name="oops_something">Oops something went wrong </string>
    <string name="oops_something_crashed">Oops !! something went wrong . Please send a report to the developer</string>
    <string name="no_status"> No status </string>
    <string name="no_username"> No username </string>
    <string name="edit_status_activity_title">Edit Your Status</string>
    <string name="title_activity_edit_name">Enter your name</string>
    <string name="title_select_contacts">Select  contact</string>
    <string name="success_response_contacts">Your contacts has been  updated successfully</string>
    <string name="exit">Exit</string>
    <string name="shareContact">Share contact</string>
    <string name="isTyping">Typing  …</string>
    <string name="isOffline">Offline</string>
    <string name="isOnline">Online</string>
    <string name="search_">Search …</string>
    <string name="add_new_member">Add</string>
    <string name="type_group_subject_here">Type group subject here …</string>
    <string name="provide_group_subject_and_optional_group_icon">Provide group subject and optional group icon</string>
    <string name="title_activity_edit_group_name">Enter new subject</string>
    <string name="attach_camera">Camera</string>
    <string name="attach_gallery">Image</string>
    <string name="media">Media</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="view_contact">View Contact</string>
    <string name="group_info">Group Info</string>
    <string name="search_hint">Search …</string>
    <string name="alert_message_delete_conversation">Delete chat. Are you sure?</string>
    <string name="hold_to_record">Hold to record</string>
    <string name="record_audio_permission_message">Record audio permission allows you to  record audios. Please allow in App Settings for additional functionality.</string>
    <string name="write_storage_permission_message">Write External permission allows us  access to your media. Please allow in App Settings for additional functionality.</string>
    <string name="write_contacts_permission_message">Write Contacts permission allows you access to your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="location_permission_message">get Location permission allows you access to your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="deleting_chat">" Deleting Chat … "</string>
    <string name="copy_message">Copy</string>
    <string name="transfer_message">Forward</string>
    <string name="message_delete">Delete message?</string>
    <string name="message_copy">Text message</string>
    <string name="notifications">Notifications</string>
    <string name="chats">Chats</string>
    <string name="account">Account</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="chat_settings">Chat settings</string>
    <string name="enter_key_off">Enter key will add new line</string>
    <string name="enter_key_on">Enter key will send your message</string>
    <string name="enter_key">Enter key is send</string>
    <string name="message_font_size">Font size</string>
    <string name="message_font_size_summary">Font size for messages</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="conversation_tones_off">Play sounds for incoming and outgoing messages</string>
    <string name="message_notifications_settings">Message notifications</string>
    <string name="notifications_settings_tone">Notification tone</string>
    <string name="default_settings">Default</string>
    <string name="message_notifications_settings_vibrate">Vibrate</string>
    <string name="message_notifications_settings_light">Light</string>
    <string name="call_notifications_settings_vibrate">Vibrate</string>
    <string name="conversation_tones">Conversations tones</string>
    <string name="message_group_notifications_settings">Group Notifications</string>
    <string name="title_activity_delete_account">Delete Account</string>
    <string name="title_activity_change_number">Change number</string>
    <string name="title_activity_account_settings">Account</string>
    <string name="call_notifications_settings">Call notifications</string>
    <string name="call_ringtone">Ringtone</string>
    <string name="message_notifications_settings_tone_silent">Silent</string>
    <string name="call_notifications_settings_tone_silent">Silent</string>
    <string name="select_one_at_least">"At least you must select one "</string>
    <string name="participants">Participants :</string>
    <string name="create_group_failed">Create group failed</string>
    <string name="share_message">Share</string>
    <string name="rate_message">If you enjoy using %s, would you mind taking a moment to rate it? Thanks for your support!</string>
    <string name="rate">Yes, Rate %s</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_cancel">No, Thanks</string>
    <string name="clear_log_call">Clear log call</string>
    <string name="voice_call">VOICE CALL</string>
    <string name="video_call">VIDEO CALL</string>
    <string name="about_title">About Us</string>
    <string name="title_activity_privacy"><![CDATA[Privacy & Terms]]></string>
    <string name="unblock_user">UnBlock</string>
    <string name="attachment_type_selector__audio">Audio</string>
    <string name="attachment_type_selector__audio_description">Audio</string>
    <string name="attachment_type_selector__contact">Contact</string>
    <string name="attachment_type_selector__contact_description">Contact</string>
    <string name="attachment_type_selector__camera">Camera</string>
    <string name="attachment_type_selector__camera_description">Camera</string>
    <string name="attachment_type_selector__location">Location</string>
    <string name="attachment_type_selector__location_description">Location</string>
    <string name="attachment_type_selector__gif">GIF</string>
    <string name="attachment_type_selector__gif_description">Gif</string>
    <string name="attachment_type_selector__gallery_description">Image or video</string>
    <string name="attachment_type_selector__file_description">File</string>
    <string name="attachment_type_selector__gallery">Gallery</string>
    <string name="attachment_type_selector__file">Document</string>
    <string name="you_couldnt_call_this_user">Couldn\'t place call. This User is not available now please try later</string>
    <string name="you_couldnt_call">Couldn\'t place call</string>
    <string name="reply">Reply</string>
    <string name="who_can_see_your_stories_updates">Who can see your stories updates</string>
    <string name="changes_to_your_privacy_settings_won_t_affect_stories_updates_that_you_ve_sent_already">Changes to your privacy settings won\'t affect stories updates that you\'ve sent already</string>
    <string name="my_contacts">My contacts</string>
    <string name="my_contacts_except">My contacts except…</string>
    <string name="my_contacts_with">My contacts with…</string>
    <string name="title_stories_privacy">Stories privacy</string>
    <string name="my_stories">My stories</string>
</resources>