<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search_conversations"
        android:icon="@drawable/ic_search_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always" />


    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/status"
        android:orderInCategory="100"
        android:title="@string/status"
        app:showAsAction="never" />
    <item
        android:id="@+id/my_stories"
        android:orderInCategory="100"
        android:title="@string/my_stories"
        app:showAsAction="never" />


    <item
        android:id="@+id/stories_privacy"
        android:orderInCategory="100"
        android:title="@string/title_stories_privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_app"
        android:orderInCategory="100"
        android:title="@string/about_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/privacy_termes"
        android:orderInCategory="100"
        android:title="@string/title_activity_privacy"
        app:showAsAction="never" />
</menu>