<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/rate_message"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/bg_buttons_admin"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/rate"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/rateLater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/bg_buttons_admin"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/rate_later"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/bg_buttons_admin"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/rate_cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

</LinearLayout>
