<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/emoText"
            android:layout_width="@dimen/empty_state_size"
            android:layout_height="@dimen/empty_state_size"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/couldnt_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/you_couldnt_call"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/couldnt_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/you_couldnt_call_this_user"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/finishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_margin="26dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>